# QuizMaster-V1

./: README.md  pyproject.toml
quiz_master_24F2008474/: app.py
quiz_master_24F2008474/controllers/: admin.py  api.py  user.py
quiz_master_24F2008474/models/: models.py  schema.sql
quiz_master_24F2008474/routes/: admin.py  api.py  auth.py  user.py
quiz_master_24F2008474/templates/: admin_dashboard.html  api.html  base.html  index.html  login.html  register.html  search_results.html  user_dashboard.html
quiz_master_24F2008474/templates/admin/: chapter_form.html  chapter_list.html  question_form.html  question_list.html  quiz_form.html  quiz_list.html  statistics.html  subject_form.html  subject_list.html  user_list.html
quiz_master_24F2008474/templates/errors/: 404.html  500.html
quiz_master_24F2008474/templates/partials/: footer.html  sidebar.html
quiz_master_24F2008474/templates/user/: quiz_end.html  quiz_list.html  quiz_results.html  quiz_retake.html  quiz_start.html  quiz_take.html  quizzes.html  scores.html  subject_quiz.html  subjects_list.html
